# ACScheduler-backend

./: README.md  app.py  pyproject.toml  requirements.txt
air/: __init__.py  _acadmin.py  _dispatch.py  _manager.py  _reception.py  auth.py  data_generator.py  db.py  schema.sql  seed_data.py
air/module/: sched.py
air/module/sched/: scheduler.py
air/module/serve/: request.py  request_factory.py  service_factory.py  service_provider.py
air/module/utils/: format_transformer.py  queue_object_factory.py  serve_queue.py  wait_queue.py  wind_speed_mapper.py
air/static/: script.js  style.css
air/templates/: base.html  index.html
air/templates/acadmin/: rooms.html
air/templates/manager/: report.html
air/templates/reception/: checkin.html  checkout.html  home.html
request/: __init__.py  air_request.py  temp_request.py  turnoff_request.py
scheduler/: scheduler.py
service/: __init__.py  air_service.py  billing_service.py  service.py
service_provider/: __init__.py  air_service_provider.py  billing_service_provider.py  service_provider.py
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py
